--- a/Latihan_2/index.html
+++ b/Latihan_2/index.html
@@ -3,14 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Galeri Foto</title>
-  <link rel="stylesheet" href="style.css">
+  
+  <style>
+    h1 .satu{
+      color: red;
+      text-align: center;
+    }
+  </style>
+
 </head>
 <body>
-  <h1>Galeri Foto Kelas</h1>
-  <div class="gallery">
+  <h1 calss="satu">Galeri Foto Kelas</h1>
+
+  <div>
     <img src="images/foto1.png" alt="Foto 1">
     <img src="images/foto2.png" alt="Foto 2">
     <img src="images/foto3.png" alt="Foto 3">
   </div>
+  <h1>Ini elemen H1 kedua</h1>
+  <p>Ini adalah paragraf buatan saya yang baru</p>
 </body>
 </html>
